# Qt_section

Qt_GraphChart2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_concurrent2/: mainwindow.cpp  mainwindow.h
Qt_design/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_modules/: CMakeLists.txt  main.cpp
Qt_slots/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch2.cpp  stopwatch2.h
Qt_widgets1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
